- Updates carousel selector for modified markup. - Fixes minor spacing issues for the carousel.

--- a/assets/src/web-stories-block/css/views/circles.css
+++ b/assets/src/web-stories-block/css/views/circles.css
@@ -9,7 +9,7 @@
 .web-stories-list.is-view-type-circles .web-stories-list__story {
   max-width: var(--ws-circle-size);
   min-width: initial;
-  margin: 0 10px;
+  margin: 0 5px;
   text-align: center;
   display: flex;
   flex-direction: column;
